objects/Tours_and_Tastings__c.object
<CustomObject>
    <fields>
        <fullName>Approval_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up field to support field-sharing relationship between T&amp;T Form and Approval History</description>
        <label>Approval History</label>
        <referenceTo>Approval_History__c</referenceTo>
        <relationshipLabel>Tours and Tastings Forms</relationshipLabel>
        <relationshipName>Tours_and_Tastings_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Code__c</fullName>
        <label>Billing Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Primary_Guest_Name__r.Account.Name</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Earliest_Request_Date__c</fullName>
        <inlineHelpText>Enter the earliest date and time for your request</inlineHelpText>
        <label>Earliest Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Visit_to_Napa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Visit to Napa?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Visit_to_Sonoma__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Visit to Sonoma?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guest_Notes__c</fullName>
        <label>Guest Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Itinerary_Approved_Date__c</fullName>
        <label>Itinerary Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Itinerary_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Itinerary Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_Request_Date__c</fullName>
        <inlineHelpText>Enter the latest date and time for your request</inlineHelpText>
        <label>Latest Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Level_of_Wine_Knowledge__c</fullName>
        <label>Level of Wine Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Novice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lodging__c</fullName>
        <label>Lodging</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Luncheon__c</fullName>
        <label>Luncheon</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the Tour &amp; Tasting Request is coming from someone who has not purchased wine from Terlato before.</description>
        <label>New Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Approved_Lodging_Requests__c</fullName>
        <description>Counts the number of approved lodging requests</description>
        <inlineHelpText>Counts the number of approved lodging requests</inlineHelpText>
        <label>Number of Approved Lodging Requests</label>
        <summaryFilterItems>
            <field>Tour_and_Tasting_Request__c.Lodging_Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Tour_and_Tasting_Request__c.Tour_and_Tasting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Approved_Requests__c</fullName>
        <label>Number of Approved Requests</label>
        <summaryFilterItems>
            <field>Tour_and_Tasting_Request__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Tour_and_Tasting_Request__c.Tour_and_Tasting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Attachments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Attachments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <inlineHelpText>Number of Total Guest including Primary</inlineHelpText>
        <label>Number of Guests</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Lodging_Requests__c</fullName>
        <description>Count of the number of Lodging Requests (Markham Winery Only)</description>
        <inlineHelpText>Count of the number of Lodging Requests (Markham Winery Only)</inlineHelpText>
        <label>Number of Lodging Requests</label>
        <summaryFilterItems>
            <field>Tour_and_Tasting_Request__c.Lodging_Request__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Tour_and_Tasting_Request__c.Tour_and_Tasting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Requests__c</fullName>
        <description>Number of tour and tasting requests in a T&amp;T</description>
        <label>Number of Requests</label>
        <summaryForeignKey>Tour_and_Tasting_Request__c.Tour_and_Tasting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>TEXT(Owner:User.Region__c)</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Guest_Mobile_Phone__c</fullName>
        <formula>Primary_Guest_Name__r.MobilePhone</formula>
        <label>Primary Guest Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Guest_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Guest Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tours and Tastings</relationshipLabel>
        <relationshipName>Tours_and_Tastings_Consumer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>This is the type of person who is requesting a visit to the winery (ie. Distributor, Retailer, Consumer, etc.)</description>
        <inlineHelpText>This is the type of person who is requesting a visit to the winery (ie. Distributor, Retailer, Consumer, etc.)</inlineHelpText>
        <label>Primary Guest Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Distributor or Employee</fullName>
                </value>
                <value>
                    <fullName>Family and VIPs</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                    <label>On-Prem Retailer</label>
                </value>
                <value>
                    <fullName>Off-Prem Retailer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Guest_Itinerary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will send the itinerary to the primary guest</inlineHelpText>
        <label>Send Guest Itinerary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <description>The date and time that a T&amp;T Form was submitted for approval.</description>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tour_Form_Approval_Status__c</fullName>
        <defaultValue>&quot;Not Submitted&quot;</defaultValue>
        <description>Controlled by field update workflow that is part of the approval process</description>
        <label>Tour Form Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <color>#FF0000</color>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submit_for_Approval</fullName>
                    <label>Submit for Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Winery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Winery Account</description>
        <label>Winery</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Winery Account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Winery Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tours and Tastings Forms</relationshipLabel>
        <relationshipName>Tours_and_Tastings_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tour and Tasting Form</label>
    <nameField>
        <displayFormat>TT-{0}</displayFormat>
        <label>TT Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tours and Tastings Forms</pluralLabel>
    <recordTypes>
        <fullName>Tour_and_Form_Approver</fullName>
        <active>true</active>
        <description>Used for Tour and Tasting Form Approvers</description>
        <label>Tour and Tasting Form - Approver</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tour_and_Tasting_Form_New</fullName>
        <active>true</active>
        <description>Use for creating new TT Forms</description>
        <label>Tour and Tasting Form - New</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_have_Account_Record_Type_Supplier</fullName>
        <active>false</active>
        <description>Validation rule to stop user from proceeding with a T&amp;T form if the associated Account record type is &quot;Supplier&quot;.</description>
        <errorConditionFormula>TEXT (Primary_Guest_Name__r.Account.Type)  = &apos;Supplier&apos;</errorConditionFormula>
        <errorMessage>You cannot create a Tour &amp; Tasting Form with a Supplier account.  Please select a different account that is not a Supplier.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DeleteAttachmentNotAllowed</fullName>
        <active>false</active>
        <errorConditionFormula>AND ( 

NOT(IsNew()), 

RecordType.Name = &quot;Trade Account&quot; , 
Primary_Guest_Name__r.Account.New_Account__c = false, 
Number_of_Attachments__c = 0,
 ISCHANGED(Number_of_Attachments__c) 
)</errorConditionFormula>
        <errorMessage>Cannot Delete Diver Report</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_to_Add_Request</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 

    OR( 
       (ISPICKVAL( Tour_Form_Approval_Status__c ,&quot;Submit for Approval&quot;)),
       (ISPICKVAL(Tour_Form_Approval_Status__c ,&quot;Approved&quot;))),

Number_of_Requests__c &lt; 1 

)</errorConditionFormula>
        <errorMessage>Please add at least one winery Tour and Tasting Request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Contact_Mobile_Required</fullName>
        <active>true</active>
        <description>Rule to ensure that the listed Primary Guest has a mobile phone number listed on the corresponding Contact record.</description>
        <errorConditionFormula>ISNULL(Primary_Guest_Name__r.MobilePhone)</errorConditionFormula>
        <errorMessage>The Primary Guest must have a mobile phone number on the Contact record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Attachment_To_Continue</fullName>
        <active>false</active>
        <description>DISABLED BY MIKE TOPALOVICH PER CARLA 4/17

Required only for Retailer Type of Tour</description>
        <errorConditionFormula>AND( 
ISPICKVAL( Request_Type__c,&quot;Retailer&quot;),	
OR( 
ISPICKVAL( Tour_Form_Approval_Status__c ,&quot;Approved&quot;), 
ISPICKVAL( Tour_Form_Approval_Status__c ,&quot;Submit for Approval&quot;)), 

Number_of_Attachments__c = 0 

)</errorConditionFormula>
        <errorMessage>Please attach a Diver Report for Retailer Requests</errorMessage>
    </validationRules>
</CustomObject>